--- a/package.json
+++ b/package.json
@@ -15,13 +15,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
-    "gravator": "^1.0.2",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "slugify": "^1.6.5"
   },
-
   "devDependencies": {
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.21"
